--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 
-	<form>
+	<form method="get">
   <h1>Feedback Form</h1>
   
   <label for="name">Name:</label>
@@ -19,7 +19,7 @@
   <input type="url" id="portfolio" name="portfolio" required>
   <br>
   <label for="favColor">Favorite Color:</label>
-  <select id="favColor" name="favColor">
+  <select itemtype="color" id="favColor" name="favColor">
     <option value="red">Red</option>
     <option value="green">Green</option>
     <option value="blue">Blue</option>
