--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 
-	<form method="get">
+	<form method="post">
   <h1>Feedback Form</h1>
   
   <label for="name">Name:</label>
