--- a/main.html
+++ b/main.html
@@ -19,7 +19,8 @@
   <input type="url" id="portfolio" name="portfolio" required>
   <br>
   <label for="favColor">Favorite Color:</label>
-  <select itemtype="color" id="favColor" name="favColor">
+  <select>
+	  <input type="color" id="favColor" name="favColor">
     <option value="red">Red</option>
     <option value="green">Green</option>
     <option value="blue">Blue</option>
